--- a/Readme.adoc
+++ b/Readme.adoc
@@ -55,16 +55,24 @@ by +
 
 == Introduction
 
+=== Simple AES programming
+
 The supplied simple AES implementation shown <<reference-simple-aes>> was supplied as a reference. However it is missing the inverse S-Box required for decryption. Our first task is to implement the inverse S-Box and then use it to implement the decryption function.
 
 We wanted to have a known working encryption and decryption implementation to compare our implementation against. For this we build simple implementation using the openssl library, as shown in <<reference-openssl-aes>>. We then verified that the openssl implementation produces the same output as the simple implementation.
 
-<<inverting-the-sbox>> shows our function for calculation the inverted SBOX table. It swaps the indices and values of the SBOX table, to create the inverted table.
+<<inverting-the-sbox>> shows our function for calculation the inverted SBOX table. It swaps the indices and values of the SBOX table, to create the inverted table. We added the inverted SBOX into the simple AES implementation. We confirmed that the decryption function now works correctly by fuzzing the implementation against 1000000 random blocks and keys. As shown in <<fuzzing-decryption>>, we validated the result for each block by comparing it with the openssl implementation.
 
 .`openssl` based AES tool
 [source#inverting-the-sbox.linenums,cpp]
 ----
 include::src/invert-sbox.cpp[tag=invert-sbox]
+----
+
+.Setup for comparing our implementation against openssl
+[source#fuzzing-decryption.linenums,cpp]
+----
+include::src/simple-aes.cpp[tag=main]
 ----
 
 
